Portal: Fix alignment of Sbanken-ready button

--- a/packages/dnb-design-system-portal/src/shared/menu/SidebarMenu.module.scss
+++ b/packages/dnb-design-system-portal/src/shared/menu/SidebarMenu.module.scss
@@ -251,6 +251,8 @@
         .dnb-sidebar-menu__theme-badge__title {
           width: 0.7em;
           overflow: hidden;
+          padding: 0.0625rem;
+          height: 1.5rem;
         }
       }
     }
